[project]
name = "ml-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/__pycache__"]
